--- a/static/index.html
+++ b/static/index.html
@@ -36,6 +36,7 @@
         </div>
 
         <div id="det-controls" class="manage-box" style="display:none;">
+            <a id="det-site-link" href="#" target="_blank" class="btn-action" style="background: #444; text-decoration: none; display: flex; align-items: center; justify-content: center;">🌐 На сайте</a>
             <button class="btn-action btn-watch" onclick="moveMovie('watching')">В Смотрю</button>
             <button class="btn-action btn-later" onclick="moveMovie('later')">В Позже</button>
             <button class="btn-action btn-done" onclick="moveMovie('watched')">В Архив</button>
